# dpdk-router

./: .gitignore  CMakeLists.txt  README.md  dpdk_init.c  dpdk_init.h  dummy_routing_table.c  dummy_routing_table.h  main.c  router.c  router.h  router.sh  routing_table.c  routing_table.h
dpdk/config/: common_base  common_linuxapp
dpdk/lib/librte_ether/: rte_ethdev.h
forwarder/: fwd.c
test/: test.cc
utils/: pointer_list.c  pointer_list.h  utils.c  utils.h
